--- a/index.html
+++ b/index.html
@@ -8,10 +8,60 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./res/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
-    <script src="./script.js" defer></script>
+    <div class="top">
+        <div class="cover">
+
+        </div>
+        <img src="./res/profile-pic.jpg" alt="profile pic" class="profile-pic">
+        <p class="name">
+            Emmanuel Akpan
+        </p>
+
+        <div class="wall top-icon-bar">
+            <div>
+                <p>
+                    <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    2D Animator
+                </p>
+            </div>
+            <div>
+                <p class="job-title top-icon-bar-content">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    Nigeria
+                </p>
+            </div>
+            <div>
+                <p class="job-title top-icon-bar-content">
+                    <i class="fa fa-clock-o" aria-hidden="true"></i>
+                    GMT+1
+                </p>
+            </div>
+        </div>
+        <div class="wall">
+            <p class="desc">
+                I'm a skilled 2D Animator with a focus on character animation, crafting captivating stories,
+                advertisements, and reels. With two years of experience honing my craft, I bring creativity and
+                expertise to every project I undertake. When I'm not breathing life into animations, you might find me
+                behind the steering wheel or immersed in web design projects like this one.
+            </p>
+        </div>
+        <button type="button">
+            Resume
+        </button>
+    </div>
+    <div class="wall">
+        <p class="section-title">
+            Skills
+        </p>
+        <div class="card-area">
+            <div class="card"></div>
+        </div>
+    </div>
 </body>
 
 </html>
