--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 behind the steering wheel or immersed in web design projects like this one.
             </p>
         </div>
-        <button type="button">
+        <button type="button" class="button">
             Resume
         </button>
     </div>
@@ -59,7 +59,9 @@
             Skills
         </p>
         <div class="card-area">
-            <div class="card"></div>
+            <div class="card">
+                <img>
+            </div>
         </div>
     </div>
 </body>
