--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
         </p>
         <div class="card-area">
             <div class="card">
-                <img>
+                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+            </div>
+            <div class="card">
+                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+            </div>
+            <div class="card">
+                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+            </div>
+            <div class="card">
+                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
             </div>
         </div>
     </div>
