--- a/index.html
+++ b/index.html
@@ -61,18 +61,38 @@
         <div class="card-area">
             <div class="card">
                 <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+                <p class="card-title">2D Animation</p>
             </div>
             <div class="card">
-                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+                <img src="./res/7010937_3521515.jpg" alt="pic" class="card-pic">
+                <p class="card-title">Character Design</p>
             </div>
             <div class="card">
-                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+                <img src="./res/9968198.jpg" alt="pic" class="card-pic">
+                <p class="card-title">Storyboarding</p>
             </div>
             <div class="card">
-                <img src="./res/9090261.jpg" alt="pic" class="card-pic">
+                <img src="./res/10491218_4473722.jpg" alt="pic" class="card-pic">
+                <p class="card-title">Sound Design</p>
             </div>
         </div>
-    </div>
+        <p class="section-title">
+            Works
+        </p>
+        <div class="card-area">
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+
+        </div>
+        <p class="section-title">
+            Tools & Programs
+        </p>
 </body>
 
 </html>
