--- a/index.html
+++ b/index.html
@@ -88,11 +88,69 @@
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
             </div>
-
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">2D Animation</p>
+            </div>
         </div>
         <p class="section-title">
             Tools & Programs
         </p>
+        <div class="card-area small">
+            <div class="card">
+                <img src="./res//moho_pro-removebg-preview.png" alt="pic" class="card-pic">
+                <p class="card-title">Moho Pro</p>
+            </div>
+            <div class="card">
+                <img src="./res/adobe-audition-download.png" alt="pic" class="card-pic">
+                <p class="card-title">Adobe Adution</p>
+            </div>
+            <div class="card">
+                <img src="./res/movavi.png" alt="pic" class="card-pic">
+                <p class="card-title">Movavi</p>
+            </div>
+            <div class="card">
+                <img src="./res/mooltik.png" alt="pic" class="card-pic">
+                <p class="card-title">Mooltik</p>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-area">
+        <div class="wall bottom">
+            <div>
+                <button type="button" class="button">
+                    Hire me
+                </button>
+            </div>
+            <div class="social-area">
+                <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                <i class="fa fa-youtube" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
