--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 </head>
 
 <body>
-    <div class="top">
+    <div class="float-bar hidden-element">
+        <div class="profile-name">
+            <img src="./res/profile-pic.jpg" alt="profile pic" class="top-pic">
+            <p class="top-name">Emmanuel Akpan</p>
+        </div>
+        <button type="button" class="button small">
+            Resume
+        </button>
+    </div>
+
+    <div class="top trigger-element">
         <div class="cover">
 
         </div>
