--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="wall top-icon-bar">
             <div>
-                <p>
+                <p class="job-title top-icon-bar-content">
                     <i class="fa fa-briefcase" aria-hidden="true"></i>
                     2D Animator
                 </p>
@@ -97,34 +97,58 @@
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">2D Animation</p>
+                <div class="play-cover">
+
+                </div>
             </div>
         </div>
         <p class="section-title">
@@ -159,7 +183,7 @@
             <div class="social-area">
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                <i class="fa fa-youtube" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 <i class="fa fa-instagram" aria-hidden="true"></i>
             </div>
         </div>
