--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Primary Meta Tags -->
+    <title>Emmanuel Akpan - The Real Animator</title>
+    <meta name="title" content="Emmanuel Akpan - The Real Animator" />
+    <meta name="description"
+        content="I'm a skilled 2D Animator with a focus on character animation, crafting captivating stories, advertisements, and reels." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://anmtr.netlify.app/" />
+    <meta property="og:title" content="Emmanuel Akpan - The Real Animator" />
+    <meta property="og:description"
+        content="I'm a skilled 2D Animator with a focus on character animation, crafting captivating stories, advertisements, and reels." />
+    <meta property="og:image" content="https://anmtr.netlify.app/res/cover.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://anmtr.netlify.app/" />
+    <meta property="twitter:title" content="Emmanuel Akpan - The Real Animator" />
+    <meta property="twitter:description"
+        content="I'm a skilled 2D Animator with a focus on character animation, crafting captivating stories, advertisements, and reels." />
+    <meta property="twitter:image" content="https://anmtr.netlify.app/res/cover.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <title>Emmanuel Akpan - The Real Animator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,11 +106,11 @@
             </div>
             <div class="card">
                 <img src="./res/9968198.jpg" alt="pic" class="card-pic">
-                <p class="card-title">Storyboarding</p>
+                <p class="card-title">Sound Design</p>
             </div>
             <div class="card">
                 <img src="./res/10491218_4473722.jpg" alt="pic" class="card-pic">
-                <p class="card-title">Sound Design</p>
+                <p class="card-title">Storyboarding</p>
             </div>
         </div>
         <p class="section-title">
@@ -103,7 +126,14 @@
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
+                <p class="tile-title">Character Design</p>
+                <div class="play-cover">
+
+                </div>
+            </div>
+            <div class="tile">
+                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <p class="tile-title">Storyboard</p>
                 <div class="play-cover">
 
                 </div>
@@ -124,28 +154,21 @@
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
+                <p class="tile-title">Character Design</p>
                 <div class="play-cover">
 
                 </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
+                <p class="tile-title">Storyboard</p>
                 <div class="play-cover">
 
                 </div>
             </div>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
-                <div class="play-cover">
-
-                </div>
-            </div>
-            <div class="tile">
-                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
+                <p class="tile-title">Character Design</p>
                 <div class="play-cover">
 
                 </div>
@@ -181,10 +204,10 @@
                 </button>
             </div>
             <div class="social-area">
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-twitter-square link" aria-hidden="true"></i>
+                <i class="fa fa-linkedin-square link" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play link" aria-hidden="true"></i>
+                <i class="fa fa-instagram link" aria-hidden="true"></i>
             </div>
         </div>
 
