--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
             Works
         </p>
         <div class="card-area">
-            <div class="tile">
-                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
-                <div class="play-cover">
+            <a href="./pages/template.html">
+                <div class="tile">
+                    <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                    <p class="tile-title">2D Animation</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="tile">
                 <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
                 <p class="tile-title">Character Design</p>
