--- a/pages/template.html
+++ b/pages/template.html
@@ -62,7 +62,7 @@
     <div class="bottom-area hang">
         <div class="wall bottom">
             <div>
-                <button type="button" class="button">
+                <button type="button" class="button smaller">
                     Hire me
                 </button>
             </div>
