--- a/pages/template.html
+++ b/pages/template.html
@@ -67,10 +67,17 @@
                 </button>
             </div>
             <div class="social-area">
-                <i class="fa fa-twitter-square link" aria-hidden="true"></i>
-                <i class="fa fa-linkedin-square link" aria-hidden="true"></i>
-                <i class="fa fa-youtube-play link" aria-hidden="true"></i>
-                <i class="fa fa-instagram link" aria-hidden="true"></i>
+                <a href="https://twitter.com/emmanuelekopimo" target="_blank" rel="noopener" title="X: emmanuelekopimo">
+                    <i class="fa fa-twitter-square link" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/emmanuelekopimo" target="_blank" rel="noopener"
+                    title="LinkedIn: emmanuelekopimo">
+                    <i class="fa fa-linkedin-square link" aria-hidden="true"></i></a>
+                <a href="https://youtube.com/@therealanimator?si=tUcG5ytsM7V88QBD" target="_blank" rel="noopener"
+                    title="YouTube: therealanimator">
+                    <i class="fa fa-youtube-play link" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/emmanuelekopimo/?hl=en" target="_blank" rel="noopener"
+                    title="Instagram: emmanuelekopimo">
+                    <i class="fa fa-instagram link" aria-hidden="true"></i></i></a>
             </div>
         </div>
 
