--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="tile">
-                <img src="./res/9090261.jpg" alt="pic" class="tile-pic">
+                <img src="./res/sound_design.png" alt="pic" class="tile-pic">
                 <p class="tile-title">Sound Design</p>
                 <div class="play-cover">
 
