--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             Works
         </p>
         <div class="card-area">
-            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC&name=Short Advertisement Reel">
                 <div class="tile">
                     <img src="https://i.ytimg.com/vi/L_gxCZMHHnc/maxresdefault.jpg" alt="pic" class="tile-pic">
                     <p class="tile-title">2D Animation</p>
@@ -126,56 +126,71 @@
                     </div>
                 </div>
             </a>
-            <div class="tile">
-                <img src="./res/sh1_road_bus_view_00001.png" alt="pic" class="tile-pic">
-                <p class="tile-title">Character Design</p>
-                <div class="play-cover">
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/sh1_road_bus_view_00001.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">Character Design</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="./res/story-1.png" alt="pic" class="tile-pic">
-                <p class="tile-title">Storyboard</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/story-1.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">Storyboard</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="./res/pic_boy.png" alt="pic" class="tile-pic">
-                <p class="tile-title">2D Animation</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/pic_boy.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">2D Animation</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="https://i.ytimg.com/vi/a0MbTNO3QBk/maxresdefault.jpg" alt="pic" class="tile-pic">
-                <p class="tile-title" style="color:white">Logo Animation</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="https://i.ytimg.com/vi/a0MbTNO3QBk/maxresdefault.jpg" alt="pic" class="tile-pic">
+                    <p class="tile-title" style="color:white">Logo Animation</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="./res/pic_junior_evening_00001.png" alt="pic" class="tile-pic">
-                <p class="tile-title">Character Design</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/pic_junior_evening_00001.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">Character Design</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="./res/sound_design.png" alt="pic" class="tile-pic">
-                <p class="tile-title">Sound Design</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/sound_design.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">Sound Design</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
-            <div class="tile">
-                <img src="./res/pic_mama_endurance_00001.png" alt="pic" class="tile-pic">
-                <p class="tile-title">Character Design</p>
-                <div class="play-cover">
+            </a>
+            <a href="./pages/template.html?v=L_gxCZMHHnc?si=2PkGm7m8XRwYpurC">
+                <div class="tile">
+                    <img src="./res/pic_mama_endurance_00001.png" alt="pic" class="tile-pic">
+                    <p class="tile-title">Character Design</p>
+                    <div class="play-cover">
 
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
+
         <p class="section-title">
             Tools & Programs
         </p>
